salesforce/force-app/main/default/objects/Cred_Assist_Config__mdt/Cred_Assist_Config__mdt.object-meta.xml
<CustomObject>
    <description>Hybrid credentialing assist configuration (bridge URL and/or Claude key)</description>
    <label>Cred Assist Config</label>
    <pluralLabel>Cred Assist Configs</pluralLabel>
</CustomObject>