salesforce/force-app/main/default/objects/Cred_Assist_Config__mdt/fields/Bridge_Secret__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Secret__c</fullName>
    <description>Bearer token matching CRED_ASSIST_SECRET on the Next bridge</description>
    <label>Bridge Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>