salesforce/force-app/main/default/objects/Cred_Assist_Config__mdt/fields/Bridge_URL__c.field-meta.xml
<CustomField>
    <fullName>Bridge_URL__c</fullName>
    <description>Optional Next.js bridge base URL, e.g. https://xxxx.ngrok.app</description>
    <label>Bridge URL</label>
    <type>Url</type>
</CustomField>