salesforce/force-app/main/default/objects/Cred_Assist_Config__mdt/fields/Claude_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Claude_Api_Key__c</fullName>
    <description>Optional Anthropic API key for direct Apex→Claude (POC only)</description>
    <label>Claude Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>