salesforce/force-app/main/default/objects/Cred_Assist_Config__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Claude model id</description>
    <label>Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>